# protaskinate

./: .coveragerc  .env  .gitignore  .pylintrc  Dockerfile  README.md  captain-definition  docker-compose.yml  pyproject.toml  schema.sql  shell.nix  tasks.py
.github/workflows/: main.yml
docs/: changelog.md
protaskinate/: app.py  index.py
protaskinate/entities/: __init__.py  activity_log.py  comment.py  project.py  task.py  user.py
protaskinate/repositories/: __init__.py  activity_log_repository.py  comment_repository.py  project_repository.py  repository.py  task_repository.py  user_repository.py
protaskinate/routes/: dashboard.py  login.py  logout.py  project.py  register.py  tasks.py
protaskinate/routes/forms/: login_forms.py  project_forms.py  register_forms.py
protaskinate/routes/handlers/: login_handlers.py  project_handlers.py  register_handlers.py
protaskinate/services/: __init__.py  activity_log_service.py  comment_service.py  project_service.py  task_service.py  user_service.py
protaskinate/templates/: base.html  dashboard.html  login.html  macros.html  project_board.html  project_list.html  project_task_view.html  project_view.html  register.html  tasks.html
protaskinate/utils/: csrf.py  database.py  dummy.py  login_manager.py  project.py  validation.py
tests/unit/: dummy_test.py  project_test.py  task_test.py
