[tool.poetry]
name = "protaskinate"
version = "0.1.0"
description = ""
authors = ["3nd3r1 <ender.spam.guru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
invoke = "^2.2.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
click = "^8.1.7"
gunicorn = "^23.0.0"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
